# Kraken

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Readme.md  analyze_core_dump.sh  kraken.h  kraken_demo.c  kraken_doc.html  kraken_doc_style.css  kraken_test.c  kraken_test_x86.c
docs/: index.html  kraken_doc.html  kraken_doc_style.css  style.css
